--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "webpack serve --progress --config ./webpack.config.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "unplugin-auto-import": "^0.12.1",
     "vue": "^3.2.45",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
+    "@vitejs/plugin-vue": "^4.0.0",
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.2",
     "html-webpack-plugin": "^5.5.0",
+    "unplugin-vue-components": "^0.22.12",
+    "vite": "^4.0.1",
     "vue-loader": "^17.0.1",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.7.14",
